7.x-1.x
--------------------------
 - Added a filter in the workflow.feature to avoid issues for the amount of already existing nodes.
 - Added css for chart visualizaitons, fixes issue in IE.
 - Upgrade better_exposed_filters to v3.4.
 - Update branding.
 - Added ReadTheDocs integrations and docs folder for centralized documentation
 - Disable/uninstall dkan_dataset_api if enabled because it is deprecated in favor open_data_schema_map.
 - Renamed test files.
 - Update resource tests to work on sites without zip in their format terms.
 - Moved functions from FeatureContext to DKANExtension.
 - Added patch for workbench_moderation: Invalid argument supplied for foreach() 2360973.
 - Added a function in dkan_sitewide to check if a specific page is the front page.
 - Improve module and user cleanup inside dkan workflow context after run tests
 - Update leaflet library to v1.0.2 and leaflet markercluster to v1.0.0. Unift leaflet libraries (was using a separate version for recline module)
 - Upgraded to new 1.0 release of Visualization Entity module
 - Add install hook to DKAN Workflow to force a Features revert of dkan_sitewide_menu, to make sure Workflow links added correctly
 - Remove Panels IPE from dataset and search pages; in DKAN, we only want to show IPE for panelizer layouts, not templates or other "sitewide" pages.
 - Update user profile page search to be consistant with the rest of the site and moves user info to sidebar block.
 - Fixes typo in "add data story" link in command center menu
 - Add topic icons to the drop down menu
 - Renamed the default HTML text format to 'Markdown HTML'
 - Improved markdown text editor toolbar
 - URLs on dataset's additional info are now properly displayed as links.
 - Removed warnings about undefined permissions when visualization_entity_choropleth_bundle module is enabled.
 - Removed warnings about undefined permissions when visualization_entity_geojson_bundle module is enabled.