@@ -10,6 +10,7 @@ Feature: Theme
     Given users:
       | name    | mail                | roles                |
       | John    | john@example.com    | administrator         |
+      | Site Manager | sitemanager@example.com | site manager |
   
   @noworkflow 
   Scenario: Add custom logo
@@ -33,3 +34,18 @@ Feature: Theme
     When I press "Save configuration"
     Then I wait for "3" seconds
     Then I should see "The configuration options have been saved"
+
+  @noworkflow 
+  Scenario: Add custom logo
+    Given I am logged in as "Site Manager"
+    Then I am on "Settings" page
+    And I should see "E-amil address"
+    And I fill in "Site name" with "sitename test"
+    And I fill in "Slogan" with "slogan test"
+    And I fill in "E-mail address" with "test@example.com"
+    When I press "Save configuration"
+    Then I wait for "3" seconds
+    Then I should see "The configuration options have been saved"
+    Then I should see "sitename test"
+    Then I should see "slogan test"
+    Then I should see "test@example.com"
